# radiation_simulation

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_simple.txt  CMakePresets.json  CMakeUserPresets.json  DEMO.md  INSTALL.txt  LICENSE  README.md  RadiationSimConsole  build.sh  compile_demo.sh  config.h.in
.devcontainer/: devcontainer.json  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
_backup/: Renderer.cpp  Renderer.h  VtkLegacyLoader.h
build-debug/: .ninja_deps  .ninja_log  RadiationSimConsole  build.ninja  cmake_install.cmake
build-debug/.cmake/api/v1/reply/: cache-v2-e69bd7c64cacc867bc92.json  cmakeFiles-v1-bf6471139459d3e20334.json  codemodel-v2-5278e76a7f35569aa4a3.json  index-2025-10-21T16-11-05-0451.json  target-RadiationCore-Debug-58dd3c8fcf1a3d4f5a5f.json  target-RadiationSimConsole-Debug-253e28bdd336982ad4ea.json  target-RadiationSimGUI-Debug-7556dc82e1daf4fb48b4.json  target-RadiationSimGUI_autogen-Debug-4d81f4278de4d12cd58a.json  target-RadiationSimGUI_autogen_timestamp_deps-Debug-a1d48d309570e878c463.json
build-debug/.qt/: QtDeploySupport.cmake
build-debug/RadiationSimGUI_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-debug/RadiationSimGUI_autogen/JCP2AIONHY/: moc_GeometryEditor.cpp  moc_GeometryEditor.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MaterialEditor.cpp  moc_MaterialEditor.cpp.d  moc_SensorEditor.cpp  moc_SensorEditor.cpp.d  moc_SourceEditor.cpp  moc_SourceEditor.cpp.d
build-debug/RadiationSimGUI_autogen/K7U2THO6V7/: moc_View3D.cpp  moc_View3D.cpp.d
codex_tasks/: 001_viewport_renderer.md  002_fix_build_renderer_view3d.md  _policy.md
examples/: box_thick.vtk  box_thick_big.vtk  simple_room.cpp
include/: common.h  glm_simple.h
include/core/: Material.h  Scene.h  Sensor.h  Source.h
include/geometry/: Box.h  Cylinder.h  MeshObject.h  Object3D.h  Plane.h  Sphere.h
include/io/: VtkLegacyLoader.h
include/simulation/: MonteCarloEngine.h  Particle.h
include/ui/: GeometryEditor.h  MainWindow.h  MaterialEditor.h  SensorEditor.h  SourceEditor.h
include/utils/: BVH.h  Random.h
include/visualization/: Renderer.h  View3D.h  VtkLegacyLoader.h
scripts/: apply_patch.sh  dev_build.sh  gen_thick_box_vtk.py  smoke_test.sh
src/: demo_console.cpp  main.cpp
src/core/: Material.cpp  Scene.cpp  Sensor.cpp  Source.cpp
src/geometry/: Box.cpp  MeshObject.cpp  Object3D.cpp
src/io/: VtkLegacyLoader.cpp
src/simulation/: MonteCarloEngine.cpp  Particle.cpp
src/ui/: GeometryEditor.cpp  MainWindow.cpp  MaterialEditor.cpp  SensorEditor.cpp  SourceEditor.cpp
src/utils/: BVH.cpp  Math.cpp  Random.cpp
src/visualization/: Renderer.cpp  View3D.cpp  VtkLegacyLoader.cpp
